# Swink-Agent

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  QA_Report.md  README.md  SECURITY.md  THANKYOU.md  TODO.md  _typos.toml  bacon.toml  cliff.toml  codex_qa.md  deny.toml  gemma4_plan.md  justfile  tarpaulin.toml
adapters/: AGENTS.md  CLAUDE.md  Cargo.toml  README.md
adapters/src/: anthropic.rs  azure.rs  base.rs  bedrock.rs  block_accumulator.rs  classify.rs  convert.rs  finalize.rs  google.rs  lib.rs  mistral.rs  oai_transport.rs  ollama.rs  openai.rs  openai_compat.rs  proxy.rs  remote_presets.rs  sse.rs  xai.rs
adapters/tests/: anthropic.rs  anthropic_live.rs  azure.rs  azure_live.rs  bedrock.rs  bedrock_live.rs  cargo_manifest.rs  google.rs  google_live.rs  mistral.rs  mistral_live.rs  no_default_features.rs  ollama.rs  ollama_live.rs  openai.rs  openai_live.rs  proxy_http.rs  tls_smoke_live.rs  xai.rs  xai_live.rs
adapters/tests/common/: mod.rs
adapters/tests/suite/: anthropic.rs  anthropic_live.rs  azure.rs  azure_live.rs  bedrock.rs  bedrock_live.rs  google.rs  google_live.rs  main.rs  mistral.rs  mistral_live.rs  ollama.rs  ollama_live.rs  openai.rs  openai_live.rs  proxy_http.rs  (+2 more)
artifacts/: AGENTS.md  Cargo.toml  README.md
artifacts/src/: fs_store.rs  lib.rs  memory_store.rs  streaming.rs  validate.rs
artifacts/tests/: fs_store.rs  fs_store_delete.rs  fs_store_session_id.rs  memory_store.rs  streaming.rs
auth/: AGENTS.md  Cargo.toml  README.md
auth/src/: in_memory.rs  keychain.rs  lib.rs  oauth2.rs  resolver.rs  token_source.rs
auth/tests/: in_memory_tests.rs  keychain_tests.rs  oauth2_tests.rs  resolver_tests.rs  token_source_tests.rs
eval/: AGENTS.md  CLAUDE.md  Cargo.toml  README.md
eval-judges/: AGENTS.md  Cargo.toml  README.md
eval-judges/src/: anthropic.rs  azure.rs  bedrock.rs  client.rs  gemini.rs  lib.rs  mistral.rs  ollama.rs  openai.rs  proxy.rs  util.rs  xai.rs
eval-judges/tests/: anthropic_test.rs  azure_test.rs  bedrock_test.rs  common_smoke_test.rs  gemini_test.rs  mistral_test.rs  ollama_test.rs  openai_alias_test.rs  openai_test.rs  proxy_test.rs  xai_test.rs
eval/src/: audit.rs  budget.rs  cache.rs  efficiency.rs  environment_state.rs  error.rs  evaluator.rs  gate.rs  judge.rs  lib.rs  match_.rs  response.rs  runner.rs  score.rs  semantic_tool_parameter.rs  semantic_tool_selection.rs  store.rs  telemetry.rs  testing.rs  training.rs  trajectory.rs  types.rs  url_filter.rs  yaml.rs
eval/tests/: aggregator.rs  attachment_test.rs  audit.rs  budget.rs  cache_test.rs  cli_test.rs  dispatch_judge_test.rs  efficiency.rs  environment_state.rs  eval_case_test.rs  evaluator.rs  evaluators_agent_test.rs  evaluators_code_test.rs  evaluators_multimodal_test.rs  evaluators_quality_test.rs  evaluators_rag_test.rs  evaluators_safety_test.rs  evaluators_sandbox_test.rs  evaluators_simple_test.rs  evaluators_structured_test.rs  gate.rs  generation_test.rs  judge_fixtures_test.rs  judge_registry_test.rs  match_.rs  prompt_template_test.rs  registry_panic_isolation.rs  reporter_console_test.rs  reporter_html_test.rs  reporter_json_test.rs  reporter_langsmith_test.rs  reporter_markdown_test.rs  response.rs  runner.rs  runner_cancel_test.rs  runner_initial_session_test.rs  runner_num_runs_test.rs  runner_parallelism_test.rs  sc_properties_test.rs  score_clamp_test.rs  (+21 more)
evolve/: Cargo.toml
evolve/src/: config.rs  diagnose.rs  evaluate.rs  gate.rs  lib.rs  mutate.rs  persist.rs  runner.rs  types.rs
evolve/tests/: baseline.rs  diagnose.rs  end_to_end.rs  gate.rs  mutate.rs  persist.rs  tool_description.rs
local-llm/: AGENTS.md  CLAUDE.md  Cargo.toml  README.md
local-llm/src/: convert.rs  embedding.rs  error.rs  lib.rs  lifecycle.rs  loader.rs  model.rs  preset.rs  progress.rs  runner.rs  stream.rs
local-llm/tests/: embedding_live.rs  local_live.rs  no_default_features.rs
macros/: AGENTS.md  Cargo.toml  README.md
macros/examples/: derived_tool.rs
macros/src/: lib.rs  tool_attr.rs  tool_schema.rs
macros/tests/: derive_tests.rs  tool_attr_tests.rs  trybuild.rs
mcp/: AGENTS.md  Cargo.toml  README.md
mcp/src/: config.rs  connection.rs  convert.rs  error.rs  event.rs  lib.rs  manager.rs  tool.rs  tool_info.rs
mcp/tests/: config_test.rs  connection_test.rs  convert_test.rs  filter_test.rs  lifecycle_test.rs  manager_test.rs  policy_test.rs  tool_test.rs
memory/: AGENTS.md  CLAUDE.md  Cargo.toml  README.md
memory/src/: checkpoint_store.rs  codec.rs  compaction.rs  entry.rs  interrupt.rs  jsonl.rs  lib.rs  load_options.rs  meta.rs  migrate.rs  search.rs  sqlite.rs  store.rs  store_async.rs  time.rs
memory/tests/: async_store.rs  corruption.rs  public_api.rs  round_trip.rs  search.rs  session_roundtrip.rs  stress_append.rs
patterns/: AGENTS.md  Cargo.toml  README.md
patterns/src/: lib.rs
patterns/tests/: pipeline.rs
plugins/web/: AGENTS.md  Cargo.toml  README.md
policies/: AGENTS.md  CLAUDE.md  Cargo.toml  README.md
policies/examples/: with_policies.rs
policies/src/: audit_logger.rs  budget.rs  checkpoint.rs  content_filter.rs  deny_list.rs  lib.rs  loop_detection.rs  max_turns.rs  memory_nudge.rs  patterns.rs  pii_redactor.rs  prompt_guard.rs  recommended.rs  sandbox.rs
policies/tests/: checkpoint_hardening.rs  composition.rs  policy_integration.rs
rpc/: Cargo.toml  README.md
rpc/src/: client.rs  dto.rs  lib.rs  server.rs
rpc/tests/: end_to_end.rs  peer.rs
tui/: AGENTS.md  CLAUDE.md  Cargo.toml  README.md
tui-remote/: Cargo.toml  README.md
tui-remote/src/: lib.rs
tui-remote/tests/: remote_transport.rs
tui/examples/: custom_agent.rs
tui/src/: app.rs  commands.rs  config.rs  credentials.rs  editor.rs  error.rs  event.rs  extensions.rs  format.rs  lib.rs  main.rs  mentions.rs  session.rs  skills.rs  theme.rs  transport.rs  wizard.rs
tui/tests/: ac_tui.rs  pricing_config.rs  public_api.rs
xtask/: AGENTS.md  Cargo.toml
xtask/src/: catalog.rs  main.rs  report.rs  verifier.rs
(+886 files in other folders)
