[workspace]
members = [".", "adapters", "artifacts", "auth", "eval", "eval-judges", "evolve", "local-llm", "macros", "mcp", "memory", "patterns", "plugins/web", "policies", "rpc", "tui", "tui-remote", "xtask"]
resolver = "2"

[workspace.package]
version = "0.12.2"
edition = "2024"
rust-version = "1.95"
license = "MIT"
repository = "https://github.com/SuperSwinkAI/Swink-Agent"

[workspace.dependencies]
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = "1.0.150"
tokio = "1.52.3"
tokio-util = "0.7.18"
tokio-stream = "0.1.18"
futures = "0.3.32"
tracing = "0.1.44"
# Base pin only — no feature opinions here. Each crate opts into the features
# it needs (fmt, env-filter, registry) at its own dependency entry.
tracing-subscriber = "0.3.23"
url = "2.5.8"
uuid = { version = "1.23.3", features = ["v4"] }
# TLS is rustls with the pure-Rust `ring` provider — NOT the default
# aws-lc-rs, whose aws-lc-sys build requires cc/cmake (+ NASM on Windows)
# in every downstream consumer. `rustls-no-provider` compiles rustls
# without a crypto provider; reqwest then panics at `Client` construction
# until a process default provider is installed, so every crate that
# builds a client calls its `ensure_default_crypto_provider()` helper
# first (installing ring; a provider already installed by the host — e.g.
# aws-lc-rs for FIPS — wins). The non-TLS features mirror what reqwest's
# defaults gave us (charset, http2, system-proxy) plus the json/stream/form
# we already enabled. Root trust stays with rustls-platform-verifier
# (OS-native roots), same as reqwest's default.
reqwest = { version = "0.13.4", default-features = false, features = ["charset", "form", "http2", "json", "rustls-no-provider", "stream", "system-proxy"] }
# The crypto provider for rustls (see the reqwest entry above). Every crate
# with a `reqwest` dependency also lists `rustls` and installs
# `rustls::crypto::ring::default_provider()` as the process default before
# constructing a client.
rustls = { version = "0.23.37", default-features = false, features = ["logging", "ring", "std", "tls12"] }
thiserror = "2.0.18"
rand = "0.10.1"
schemars = "1.2.1"
dotenvy = "0.15.7"
pretty_assertions = "1.4.1"
criterion = { version = "0.8.2", features = ["html_reports"] }
tempfile = "3.27.0"
trybuild = "1.0.116"
wiremock = "0.6.5"
# serde_yaml is unmaintained (archived by its author); serde_yaml_ng is the
# maintained fork with the same from_str/Value/Error API surface.
serde_yaml_ng = "0.10.0"
minijinja = "2.20.0"
backon = "1.6.0"
strsim = "0.11.1"
# Default features off: the defaults pull `resolve-http` (reqwest + a TLS
# stack, defaulting to aws-lc-rs) and `resolve-file` for external `$ref`
# resolution, which this workspace never does — every schema we compile is
# inline. External `$ref`s now fail at validator build instead of touching
# the network or filesystem.
jsonschema = { version = "0.48.0", default-features = false }
opentelemetry = "0.32.0"
opentelemetry_sdk = "0.32.1"
opentelemetry-otlp = "0.32.0"
askama = "0.13.1"
clap = { version = "4.6.1", features = ["derive"] }
libc = "0.2.186"
sha2 = "0.11.0"
hmac = "0.13.0"
toml = "0.9.12"
chrono = { version = "0.4.45", features = ["serde"] }
proptest = { version = "1.11.0", default-features = false, features = ["std"] }
rstest = "0.26.1"
insta = { version = "1.47.2", features = ["json"] }
syn = { version = "3.0.1", features = ["full", "extra-traits"] }
quote = "1.0.45"
proc-macro2 = "1.0.106"
bytes = "1.11.1"
dirs = "6.0.0"
regex = "1.12.4"
keyring = "4.1.1"
aws-smithy-eventstream = "0.61.1"
aws-smithy-types = "1.4.9"
aws-credential-types = "1.2.14"
aws-sigv4 = { version = "1.4.5", default-features = false, features = ["sign-http", "http1"] }
aws-smithy-runtime-api = { version = "1.12.3", features = ["client"] }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

# Restriction lints (not part of any group): every exported struct with
# all-pub fields and every exported enum must be #[non_exhaustive] unless
# it is deliberately frozen by design (those carry an explicit
# `#[allow(clippy::exhaustive_structs)]`/`exhaustive_enums` with a comment).
# Guards against `constructible_struct_adds_field` semver breaks.
exhaustive_structs = "warn"
exhaustive_enums = "warn"

# Pedantic/nursery overrides — noisy, stylistic, or churn on toolchain bumps.
# Keep this list tight; every allow is a signal lost.
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
redundant_pub_crate = "allow"
# Churn-prone nursery/pedantic lints that fire broadly on toolchain bumps
# without reliable correctness signal. Adding each here once, at the
# workspace level, so a new rust release can't silently break CI again.
missing_const_for_fn = "allow"
duration_suboptimal_units = "allow"
cast_possible_truncation = "allow"
items_after_statements = "allow"
manual_let_else = "allow"
option_if_let_else = "allow"
significant_drop_tightening = "allow"
doc_markdown = "allow"
redundant_closure_for_method_calls = "allow"
trivially_copy_pass_by_ref = "allow"
format_push_string = "allow"
unnecessary_literal_bound = "allow"

[package]
name = "swink-agent"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Core scaffolding for running LLM-powered agentic loops"
license.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["llm", "agent", "ai", "streaming", "tools"]
categories = ["development-tools", "api-bindings", "asynchronous"]

[profile.dev]
# Faster incremental builds for contributors (especially on macOS).
split-debuginfo = "unpacked"

[profile.release]
lto = "thin"
codegen-units = 1

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["builtin-tools", "transfer"]
builtin-tools = ["dep:sha2"]
transfer = []
testkit = []
artifact-store = ["dep:bytes"]
artifact-tools = ["artifact-store"]
hot-reload = ["dep:notify"]
tiktoken = ["dep:tiktoken-rs"]
plugins = []
otel = ["dep:tracing-opentelemetry", "dep:opentelemetry", "dep:opentelemetry_sdk", "dep:opentelemetry-otlp", "dep:tracing-subscriber"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["fs", "io-util", "macros", "process", "rt", "rt-multi-thread", "sync", "time"] }
tokio-util.workspace = true
futures.workspace = true
tokio-stream.workspace = true
jsonschema.workspace = true
schemars.workspace = true
regex.workspace = true
uuid.workspace = true
rand.workspace = true
tracing.workspace = true
bytes = { workspace = true, optional = true }
sha2 = { workspace = true, optional = true }
toml.workspace = true
chrono.workspace = true
tiktoken-rs = { version = "0.12.0", optional = true }
notify = { version = "7.0.0", optional = true }
tracing-opentelemetry = { version = "0.33.0", optional = true }
opentelemetry = { workspace = true, optional = true }
opentelemetry_sdk = { workspace = true, features = ["rt-tokio"], optional = true }
opentelemetry-otlp = { workspace = true, features = ["grpc-tonic"], optional = true }
tracing-subscriber = { workspace = true, features = ["registry"], optional = true }

[[bench]]
name = "context"
harness = false

[dev-dependencies]
swink-agent-adapters = { path = "adapters", features = ["proxy"] }
dotenvy.workspace = true
pretty_assertions.workspace = true
criterion.workspace = true
tokio = { workspace = true, features = ["full", "test-util"] }
wiremock.workspace = true
proptest.workspace = true
insta.workspace = true
opentelemetry.workspace = true
opentelemetry_sdk = { workspace = true, features = ["testing", "rt-tokio"] }
tracing-opentelemetry = "0.33.0"
tracing-subscriber = { workspace = true, features = ["registry"] }

[lints]
workspace = true
