[package]
name = "swink-agent-adapters"
version = "0.6.0"
edition = "2024"
rust-version = "1.88"
description = "LLM provider adapters for swink-agent"
license = "MIT"
repository = "https://github.com/SuperSwinkAI/Swink-Agent"
readme = "../README.md"
keywords = ["llm", "anthropic", "openai", "adapter", "streaming"]
categories = ["development-tools", "api-bindings", "asynchronous"]

[package.metadata.docs_rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []
full = ["all"]
all = ["anthropic", "openai", "ollama", "gemini", "proxy", "azure", "bedrock", "mistral", "xai"]
anthropic = []
openai = []
ollama = []
gemini = []
proxy = []
azure = []
bedrock = ["dep:sha2", "dep:hmac", "dep:chrono", "dep:aws-smithy-eventstream", "dep:aws-smithy-types"]
mistral = []
xai = ["openai"]

[dependencies]
swink-agent = { path = ".." }
reqwest.workspace = true
tokio.workspace = true
tokio-util.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
tracing.workspace = true
thiserror.workspace = true
sha2 = { workspace = true, optional = true }
hmac = { workspace = true, optional = true }
chrono = { workspace = true, optional = true }
aws-smithy-eventstream = { workspace = true, optional = true }
aws-smithy-types = { workspace = true, optional = true }
bytes = "1"

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
wiremock.workspace = true
pretty_assertions.workspace = true
dotenvy.workspace = true
rstest.workspace = true
insta.workspace = true

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
