[package]
name = "swink-agent-adapters"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "LLM provider adapters for swink-agent"
license.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["llm", "anthropic", "openai", "adapter", "streaming"]
categories = ["development-tools", "api-bindings", "asynchronous"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []
full = ["all"]
all = ["anthropic", "openai", "ollama", "gemini", "proxy", "azure", "bedrock", "mistral", "xai"]
anthropic = []
openai-compat = []
openai = ["openai-compat"]
ollama = []
gemini = []
proxy = []
azure = ["dep:swink-agent-auth"]
bedrock = ["dep:aws-credential-types", "dep:aws-sigv4", "dep:aws-smithy-eventstream", "dep:aws-smithy-runtime-api", "dep:aws-smithy-types"]
mistral = []
xai = ["openai-compat"]
__no_default_features_sentinel = []

[dependencies]
swink-agent = { path = "..", version = "0.8.0", default-features = false }
swink-agent-auth = { path = "../auth", version = "0.8.0", optional = true }
reqwest.workspace = true
tokio = { workspace = true, features = ["macros"] }
tokio-util.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
tracing.workspace = true
thiserror.workspace = true
aws-credential-types = { workspace = true, optional = true }
aws-sigv4 = { workspace = true, optional = true }
aws-smithy-eventstream = { workspace = true, optional = true }
aws-smithy-runtime-api = { workspace = true, optional = true }
aws-smithy-types = { workspace = true, optional = true }
bytes.workspace = true

[dev-dependencies]
swink-agent = { path = "..", default-features = false, features = ["testkit"] }
tokio = { workspace = true, features = ["full", "test-util"] }
wiremock.workspace = true
pretty_assertions.workspace = true
dotenvy.workspace = true
rstest.workspace = true
insta.workspace = true

[lints]
workspace = true
