[package]
name = "swink-agent-artifacts"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Versioned artifact storage for swink-agent sessions"
license.workspace = true
repository.workspace = true
keywords = ["llm", "agent", "artifacts", "storage", "versioned"]
categories = ["development-tools", "filesystem"]
readme = "README.md"

[dependencies]
swink-agent = { path = "..", version = "0.8.1", default-features = false, features = ["artifact-store"] }
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["fs", "io-util", "rt", "sync"] }
bytes.workspace = true
chrono.workspace = true
tracing.workspace = true
thiserror.workspace = true
futures.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
tempfile.workspace = true

[lints]
workspace = true
