[package]
name = "swink-agent-auth"
version = "0.7.4"
edition = "2024"
rust-version = "1.88"
description = "Credential management and OAuth2 support for swink-agent"
license = "MIT"
repository = "https://github.com/SuperSwinkAI/Swink-Agent"
keywords = ["llm", "agent", "oauth2", "credentials", "auth"]
categories = ["development-tools", "authentication"]
readme = "../README.md"

[dependencies]
swink-agent = { path = "..", default-features = false }
reqwest.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
futures.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
wiremock.workspace = true
pretty_assertions.workspace = true
tokio = { workspace = true, features = ["full", "test-util"] }
