[package]
name = "swink-agent-auth"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Credential management and OAuth2 support for swink-agent"
license.workspace = true
repository.workspace = true
keywords = ["llm", "agent", "oauth2", "credentials", "auth"]
categories = ["development-tools", "authentication"]
readme = "README.md"

[dependencies]
swink-agent = { path = "..", version = "0.8.0", default-features = false }
reqwest.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["sync"] }
futures.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
wiremock.workspace = true
pretty_assertions.workspace = true
tokio = { workspace = true, features = ["full", "test-util"] }
tracing-subscriber = { version = "0.3", features = ["fmt"] }
