[package]
name = "swink-agent-auth"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Credential management and OAuth2 support for swink-agent"
license.workspace = true
repository.workspace = true
keywords = ["llm", "agent", "oauth2", "credentials", "auth"]
categories = ["development-tools", "authentication"]
readme = "README.md"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []
# Persist credentials in the OS keychain (macOS Keychain Services, Windows
# Credential Manager, Linux/BSD Secret Service). Off by default: it pulls in
# platform secret-store dependencies that headless deployments do not need.
keychain = ["dep:keyring", "tokio/rt"]

[dependencies]
swink-agent = { path = "..", version = "0.12.0", default-features = false }
reqwest.workspace = true
# Supplies the `ring` crypto provider, installed as the process default
# before any reqwest client is built (workspace reqwest is
# `rustls-no-provider`; see the root Cargo.toml).
rustls.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["sync", "time"] }
futures.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
keyring = { workspace = true, optional = true }

[dev-dependencies]
wiremock.workspace = true
pretty_assertions.workspace = true
tokio = { workspace = true, features = ["full", "test-util"] }
tracing-subscriber = { workspace = true, features = ["fmt"] }
