[package]
name = "swink-agent-eval"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Evaluation framework for swink-agent: trajectory tracing, golden path verification, and cost governance"
license.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["llm", "agent", "eval", "benchmark", "testing"]
categories = ["development-tools", "development-tools::testing"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
swink-agent = { path = "..", version = "0.8.0", default-features = false }
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["macros", "time"] }
futures.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio-util.workspace = true
uuid.workspace = true
regex.workspace = true
sha2.workspace = true
async-trait = "0.1"
serde_yaml = { workspace = true, optional = true }

[features]
yaml = ["serde_yaml"]

[dev-dependencies]
swink-agent = { path = "..", default-features = false, features = ["testkit"] }
tempfile.workspace = true
tokio = { workspace = true, features = ["full", "test-util"] }
pretty_assertions.workspace = true

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
